--- a/servicestart.yml
+++ b/servicestart.yml
@@ -1,13 +1,12 @@
 ---
 ##Demo Ansible Playbook to stop Application Services
-- name: Running service stop script 
+- name: Running service stop script
   hosts: linuxserver
   become: yes
   vars:
     scriptFile: /tmp/test.sh
   tasks:
   - name: stop the app service
-    shell: "sh -x {{ scriptFile }} > /tmp/test.log"
-    register: helloworld
-  - debug: var=helloworld
+    shell: "sh {{ scriptFile }} > /tmp/test.log"
 ...
+
