--- a/winknarticles.yml
+++ b/winknarticles.yml
@@ -2,18 +2,12 @@
 - name: Installing kb articles on winserver
   hosts: winserver
   tasks:
-- name: Download KB3172729 for Server 2012 R2
-  win_get_url:
- #  url: windows8-rt-kb3172729-x64_69cab4c7785b1faa3fc450f32bed4873d53bb96f.msu  
-  url: http://download.windowsupdate.com/d/msdownload/update/software/secu/2016/07/windows8.1-kb3172729-x64_e8003822a7ef4705cbb65623b72fd3cec73fe222.msu
-  dest: C:\temp\KB3172729.msu
-- name: Install hotfix
-  win_hotfix:
-  hotfix_kb: KB3172729
-  source: C:\temp\KB3172729.msu
-  state: present
-  register: hotfix_result
-- name: Reboot host if required
-  win_reboot:
-  when: hotfix_result.reboot_required
+   - name: Download KB3172729 for Server 2012 R2
+     win_get_url: 
+       url: http://download.windowsupdate.com/d/msdownload/update/software/secu/2016/07/windows8.1-kb3172729-x64_e8003822a7ef4705cbb65623b72fd3cec73fe222.msu
+       dest: C:\temp\windows8.1-kb3172729-x64_e8003822a7ef4705cbb65623b72fd3cec73fe222.msu
+   - name: Install kb article
+     win_package:
+          path: C:\temp\windows8.1-kb3172729-x64_e8003822a7ef4705cbb65623b72fd3cec73fe222.msu
+          state: present
 ...
